[package]
name = "metal"
version = "0.1.0"
authors = ["Mefgalm <mefgalm@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.4"
serde_json = "1.0.64"
tokio = { version = "1.7.0", features = ["full"] }
serde = { version = "1.0.126", features = ["derive"] }
regex = "1.5.4"
futures = "0.3.15"
dirs = "3.0.2"
